<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF"
    android:elevation="5dp"
    app:cardBackgroundColor="#00FFFFFF"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="153dp"
        android:padding="15dp">

        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/this_is_demo_name"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_email"
            android:layout_marginStart="10dp"
            android:text="@string/this_is_course_name"
            android:textColor="#000"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/user_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name_text"
            android:layout_marginStart="10dp"
            android:text="@string/this_is_email_name"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/edit_flight_button"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="188dp"
            android:layout_marginRight="188dp"
            android:layout_marginBottom="4dp"
            android:text="Details"
            app:backgroundTint="#F57C00" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>