<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="411dp"
        android:layout_height="180dp"
        android:padding="15dp">

        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/this_is_demo_name"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_email"
            android:layout_marginStart="10dp"
            android:text="@string/this_is_course_name"
            android:textColor="#000"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/user_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name_text"
            android:layout_marginStart="10dp"
            android:text="@string/this_is_email_name"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="23dp"
            android:text="@string/this_is_email_name"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="110dp"
            android:text="remove from cart"
            app:backgroundTint="#E64A19" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>