<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="265dp"
        android:padding="15dp">

        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/this_is_demo_name"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_email"
            android:text="@string/this_is_course_name"
            android:textColor="#000"
            android:textSize="25sp"
            android:layout_marginStart="10dp" />


        <TextView
            android:id="@+id/user_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name_text"
            android:layout_marginStart="10dp"
            android:text="@string/this_is_email_name"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:text="@string/this_is_email_name"
            android:textColor="#000"
            android:textSize="25sp" />

        <Button
            android:id="@+id/cust_button"
            android:layout_width="188dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="173dp"
            android:layout_marginEnd="135dp"
            android:layout_marginBottom="15dp"
            android:text="edit this flight" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>